--- a/layouts/partials/pricing.html
+++ b/layouts/partials/pricing.html
@@ -2,7 +2,7 @@
 {{- $title      := index $pricing "title" }}
 {{- $subtitle   := index $pricing "subtitle" }}
 {{- $plans   := index $pricing "plans" }}
-<section class="section section-feature-grey is-medium">
+<section class="section is-medium" id="pricing">
   <div class="container"> 
     <div class="title-wrapper has-text-centered pb-20">
       <h2 class="title is-2">{{ $title }}</h2>
