--- a/layouts/partials/pricing.html
+++ b/layouts/partials/pricing.html
@@ -10,6 +10,9 @@
     </div>
 
     <div class="content-wrapper ">
+      <div class="columns is-mobile">
+        <div class="column is-10 is-offset-1">
+
       <div class="columns">
         {{- range $index, $elements := $plans }}
         <div class="column is-one-third ">
@@ -40,6 +43,12 @@
         </div>
         {{- end }}
       </div>
+      </div>
+      </div>
+
+
+
+      
     </div>
 
 
