--- a/layouts/partials/features.html
+++ b/layouts/partials/features.html
@@ -18,7 +18,7 @@
               <img src="{{  .image | relURL }}">
             </div>  
             <div class="card-title mt-20">
-              <h4><strong>{{ .title }}</strong></h4>
+              <h3 class="title is-5"><strong>{{ .title }}</strong></h3>
             </div>
             <div class="card-text mt-20">
               <p>{{ .text }}</p>
