--- a/layouts/partials/features.html
+++ b/layouts/partials/features.html
@@ -1,6 +1,8 @@
 {{- $features   := .Site.Params.features }}
 {{- $title      := index $features "title" }}
 {{- $subtitle   := index $features "subtitle" }}
+{{- $buttonText := index $features "buttontext" }}
+{{- $buttonLink := index $features "buttonlink" }}
 {{- $lists   := index $features "list" }}
 <section class="section section-feature-grey is-medium" id="features">
   <div class="container"> 
@@ -25,7 +27,17 @@
             </div>
           </div>
         </div>
-        {{- end }}
+        {{- end }}      
+
+      </div>
+      <div class="columns">
+        <div class="column is-full has-text-centered mt-20">          
+        <p>
+          <a class="button cta secondary-btn raised" href="{{ $buttonLink }}">
+            {{ $buttonText }}
+          </a>
+          </p>
+        </div>
       </div>
     </div>
   </div>
