--- a/layouts/partials/pricing.html
+++ b/layouts/partials/pricing.html
@@ -1,6 +1,8 @@
 {{- $pricing   := .Site.Params.pricing }}
 {{- $title      := index $pricing "title" }}
 {{- $subtitle   := index $pricing "subtitle" }}
+{{- $buttonText := index $pricing "buttontext" }}
+{{- $buttonLink := index $pricing "buttonlink" }}
 {{- $plans   := index $pricing "plans" }}
 <section class="section is-medium" id="pricing">
   <div class="container"> 
@@ -46,6 +48,15 @@
       </div>
       </div>
 
+      
+      <div class="columns">
+        <div class="column is-full has-text-centered mt-20">          
+        <p>
+          <a class="button cta secondary-btn raised" href="{{ $buttonLink }}">
+            {{ $buttonText }}
+          </a>
+          </p>
+        </div>
 
 
       
