--- a/layouts/partials/pricing.html
+++ b/layouts/partials/pricing.html
@@ -21,7 +21,7 @@
           <div class="price-card is-bordered has-text-centered   {{if eq $index 1}} is-active{{end}}">
             <div class="card-title">
               <h4>{{ .title }}</h4>
-              <h4 class="price">${{ .price }}</h4>
+              <h4 class="price">{{ .price }}</h4>
             </div>
             <div class="card-body">
               <div class="card-icon">
