--- a/themes/hugo-fresh/assets/fresh/partials/_hero.scss
+++ b/themes/hugo-fresh/assets/fresh/partials/_hero.scss
@@ -6,11 +6,12 @@ Hero styles
     padding-top: 6rem;
     padding-bottom: 6rem;
     .title, .subtitle {
-        font-family: 'Open Sans', sans-serif;
+        font-family: 'Helvetica', sans-serif;
     }
     .title {
         &.is-bold {
-            font-weight: 700;
+            font-weight: 00;
+            font-size: 64px;
         }
     }
     .subtitle {
