updated font and btn etc

--- a/layouts/partials/css.html
+++ b/layouts/partials/css.html
@@ -5,15 +5,14 @@
 {{- $fontFace     := replace .Site.Params.font.name " " "+" }}
 {{- $fontSizes    := delimit .Site.Params.font.sizes "," }}
 <!-- {{- $fontUrl      := printf "https://fonts.googleapis.com/css?family=%s:%s" $fontFace $fontSizes }} -->
-
 {{- $fontUrl      := printf "https://fonts.googleapis.com/css?family=%s:%s" $fontFace $fontSizes }}
 
 
 <link rel="icon" type="image/png" href="{{ "images/favicon.png" | relURL }}" />
 
-
+<!--fonts-->
+<link href="https://fonts.googleapis.com/css?family=Montserrat:400,600&display=swap" rel="stylesheet">
 <link href="{{ $fontUrl }}" rel="stylesheet">
-
 {{- if $inServerMode }}
 {{- $css := resources.Get $sass | toCSS $cssOpts }}
 <link rel="stylesheet" type="text/css" href="{{ $css.RelPermalink }}">
