--- a/layouts/partials/pricing-inner.html
+++ b/layouts/partials/pricing-inner.html
@@ -28,7 +28,7 @@
             <h2 class="title is-4">{{.title}}</h2>
             <p class="mb-20 is-size-5">{{.price}}</p>
             <p class="mb-20">
-              <a href="{{ .btnURL }}" class="button is-info is-outlined">{{ .btnText }}</a>
+              <a href="{{ .btnURL }}" class="button is-info  btn-aligner">{{ .btnText }}</a>
             </p>
           </td>
           {{end}}
