--- a/themes/hugo-fresh/assets/fresh/partials/_footer.scss
+++ b/themes/hugo-fresh/assets/fresh/partials/_footer.scss
@@ -20,6 +20,7 @@ footer.footer-dark {
             text-transform: uppercase;
             letter-spacing: 1px;
             margin-bottom: 20px;
+            color: #fff;
         }
         ul.link-list {
             line-height: 40px;
