--- a/themes/hugo-fresh/assets/fresh/partials/_sections.scss
+++ b/themes/hugo-fresh/assets/fresh/partials/_sections.scss
@@ -17,7 +17,9 @@ Section Styles
         height: 75vh !important;
     }
     .title, .subtitle {
-        font-family: 'Open Sans', sans-serif;
+        /*font-family: 'Open Sans', sans-serif;*/
+
+        font-family: 'Nunito', sans-serif;
 
     }
     .subtitle {
@@ -32,8 +34,8 @@ Section Styles
     max-width: 500px;
     margin: 0 auto;
     .title, .subtitle {
-        font-family: 'Open Sans', sans-serif;
-
+        /*font-family: 'Open Sans', sans-serif;*/
+        font-family: 'Nunito', sans-serif;
     }
     .subtitle {
         &.is-muted {
