--- a/layouts/partials/hero-body.html
+++ b/layouts/partials/hero-body.html
@@ -6,12 +6,12 @@
 {{- $buttonText2 := index $hero "buttontext2" }}
 {{- $buttonLink2 := index $hero "buttonlink2" }}
 {{- $image      := index $hero "image" }}
-<div class="hero-body">
+<div class="hero-body  hero-bg"  style="background-image: url({{ printf "/images/%s" $image | relURL }});">
   <div class="container">
     <div class="columns is-vcentered">
-      <div class="column is-5 is-offset-1 landing-caption">
+      <div class="column is-offset-1 landing-caption has-text-centered " >
         <h1 class="title is-2 is-bold is-spaced">
-          {{ $title }}
+          {{ $title | safeHTML }}
         </h1>
         {{ with $subtitle }}
         <h2 class="subtitle is-5 is-muted">
@@ -19,20 +19,21 @@
         </h2>
         {{ end }}
         <p>
-          <a class="button cta secondary-btn raised" href="{{ $buttonLink }}">
+          <a class="button cta secondary-btn raised rounded btn-aligner" href="{{ $buttonLink }}">
             {{ $buttonText }}
           </a>
-
-          <a class="button cta primary-btn raised" href="{{ $buttonLink2 }}">
+          {{if $buttonText2 }}
+          <a class="button cta   primary-btn raised rounded" href="{{ $buttonLink2 }}">
             {{ $buttonText2 }}
           </a>
+          {{end}}
         </p>
       </div>
-      <div class="column is-5 is-offset-1">
+      <!-- <div class="column  is-offset-1">
         <figure class="image is-4by3">
           <img src="{{ printf "/images/%s" $image | relURL }}" alt="Description">
         </figure>
-      </div>
+      </div> -->
     </div>
   </div>
 </div>
