--- a/themes/hugo-fresh/assets/fresh/partials/_hero.scss
+++ b/themes/hugo-fresh/assets/fresh/partials/_hero.scss
@@ -6,11 +6,13 @@ Hero styles
     padding-top: 6rem;
     padding-bottom: 6rem;
     .title, .subtitle {
-        font-family: 'Helvetica', sans-serif;
+        // font-family: 'Helvetica', sans-serif;
+
+        font-family: 'Nunito', sans-serif;
     }
     .title {
         &.is-bold {
-            font-weight: 00;
+            font-weight: 800;
             font-size: 64px;
         }
     }
