--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -95,3 +95,7 @@ menu{position:-webkit-sticky;position:sticky;top:50px;padding:.5rem;margin:.5rem
 .button.signup-button{
     width: auto;
 }
+
+.blog-list .content figure{
+    margin: 0px;
+}
