updated hover effect on button

--- a/layouts/blog/list.html
+++ b/layouts/blog/list.html
@@ -21,7 +21,7 @@
                         <h1 class="title has-text-black is-3">{{.Title}} </h1>
                         <p class="has-text-dark">{{.Summary | safeHTML | truncate 150}}</p>                        
                         <a href="{{.Permalink}}">
-                            <span class="button signup-button rounded secondary-btn btn-aligner raised">
+                            <span class="button signup-button rounded secondary-btn btn-aligner ">
                             Read More →
                             </span>
                         </a>
