--- a/layouts/partials/froalaDesign.html
+++ b/layouts/partials/froalaDesign.html
@@ -29,7 +29,7 @@
 
              
 
-              <p><a class="button btn-align-md btn-aligner rounded  raised {{ .btnKlass | markdownify }}" href="{{ .btnURL | markdownify }}">{{ .btnText | markdownify }}</a></p>
+              <p><a class="button btn-align-md btn-aligner rounded   {{ .btnKlass | markdownify }}" href="{{ .btnURL | markdownify }}">{{ .btnText | markdownify }}</a></p>
             </div>
           </div>
         </article>
