--- a/layouts/partials/hero-body.html
+++ b/layouts/partials/hero-body.html
@@ -19,11 +19,11 @@
         </h2>
         {{ end }}
         <p>
-          <a class="button cta secondary-btn raised rounded btn-aligner" href="{{ $buttonLink }}">
+          <a class="button cta secondary-btn  rounded btn-aligner" href="{{ $buttonLink }}">
             {{ $buttonText }}
           </a>
           {{if $buttonText2 }}
-          <a class="button cta   primary-btn raised rounded" href="{{ $buttonLink2 }}">
+          <a class="button cta   primary-btn  rounded" href="{{ $buttonLink2 }}">
             {{ $buttonText2 }}
           </a>
           {{end}}
