--- a/layouts/partials/pricing.html
+++ b/layouts/partials/pricing.html
@@ -53,7 +53,7 @@
       <div class="columns">
         <div class="column is-full has-text-centered mt-20">          
         <p>
-          <a class="button cta secondary-btn raised btn-aligner rounded" href="{{ $buttonLink }}">
+          <a class="button cta secondary-btn  btn-aligner rounded" href="{{ $buttonLink }}">
             {{ $buttonText }}
           </a>
           </p>
