--- a/themes/hugo-fresh/layouts/partials/navbar-clone.html
+++ b/themes/hugo-fresh/layouts/partials/navbar-clone.html
@@ -68,7 +68,7 @@
         </div>
         {{- else if .button }}
         <a href="{{ .url }}" class="navbar-item">
-          <span class="button signup-button rounded secondary-btn btn-aligner raised">
+          <span class="button signup-button rounded secondary-btn btn-aligner">
             {{ .title }}
           </span>
         </a>
