--- a/layouts/partials/css.html
+++ b/layouts/partials/css.html
@@ -8,7 +8,7 @@
 {{- $fontUrl      := printf "https://fonts.googleapis.com/css?family=%s:%s" $fontFace $fontSizes }}
 
 
-<link rel="icon" type="image/png" href="{{ "images/favicon.png" | relURL }}" />
+<link rel="icon" type="image/png" href="{{ "images/favicon.svg" | relURL }}" />
 
 <!--fonts-->
 <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600&display=swap" rel="stylesheet">
