--- a/themes/hugo-fresh/assets/fresh/partials/_colors.scss
+++ b/themes/hugo-fresh/assets/fresh/partials/_colors.scss
@@ -7,7 +7,7 @@ $smoke-white: #fcfcfc;
 $grey-white: #f2f2f2;
 
 $primary: #4FC1EA;
-$secondary: #F39200;
+$secondary: #0C1E4A;
 $accent: #00efb7;
 
 $fade-grey: #ededed;
