--- a/themes/hugo-fresh/layouts/partials/css.html
+++ b/themes/hugo-fresh/layouts/partials/css.html
@@ -9,7 +9,7 @@
 {{- $fontUrl      := printf "https://fonts.googleapis.com/css?family=%s:%s" $fontFace $fontSizes }}
 
 
-<link rel="icon" type="image/png" href="{{ "images/favicon.png" | relURL }}" />
+<link rel="icon" type="image/png" href="{{ "images/favicon.svg" | relURL }}" />
 
 
 <link href="{{ $fontUrl }}" rel="stylesheet">
