--- a/layouts/partials/testimonials.html
+++ b/layouts/partials/testimonials.html
@@ -22,7 +22,7 @@
               <p>
                 <span class="icon-box-text">{{ $text | markdownify }}</span>
               </p>  
-              <span class="title is-5">Person Name</span>      
+              <span class="title is-5">Katrin Liivat</span>      
               <span class="ml-10">{{ $name }}</span>
             </div>
           </div>
