--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -2,7 +2,7 @@
 <html lang="{{ .Site.LanguageCode }}">
   <head>
     {{ partial "meta.html" . }}
-    <title>{{ block "title" . }}{{ .Site.Title }}{{ end }}</title>
+    <title>{{ if .Page.Title }} {{ .Title }} {{ else }} .Site.Title }} {{end}}</title>
     {{ partial "css.html" . }}
   </head>
   <body>
