--- a/layouts/pages/single.html
+++ b/layouts/pages/single.html
@@ -16,20 +16,19 @@
     {{ partial "single/single.html" . }}
 
     
-    {{ if .Params.include_froala }}
-    {{ partial "froalaDesign.html" . }}
-    {{ end }}
 
-    {{ if .Params.include_featuresList }}
-    {{ partial "features-list.html" . }}
-    {{ end }}
-
-    {{ if .Params.include_froalaBlock }}
-    {{ partial "froalaBlock.html" . }}
-    {{ end }}
-
-    
-    
+    <section class="section is-small">
+      <div class="container">
+        <div class="columns">
+          <div class="column is-centered-tablet-portrait">
+            <h1 class="title section-title">{{ .Title }}</h1>
+            <h5 class="subtitle is-5 is-muted">{{ .Params.Subtitle }}</h5>
+            <div class="divider"></div>
+          </div>
+        </div>
+        {{ .Content }}
+      </div>
+    </section>
 
     
     {{ if .Params.include_pricing }}
