--- a/layouts/partials/cta.html
+++ b/layouts/partials/cta.html
@@ -3,7 +3,7 @@
 {{- $text   := index $cta "text" }}
 {{- $subtitle   := index $cta "subtitle" }}
 {{- $clientLogos   := index $cta "clientlogos" }}
-<section class="section section-feature-grey is-medium cta">
+<section class="section  is-medium cta">
   <div class="container"> 
     <div class="title-wrapper has-text-centered ">
       <h2 class="title is-2">{{ $title }}</h2>
