--- a/themes/hugo-fresh/layouts/partials/single/content.html
+++ b/themes/hugo-fresh/layouts/partials/single/content.html
@@ -1,5 +1,5 @@
-<section class="section is-medium">
-  <div class="container">
+<section class="section is-small">
+  <!-- <div class="container">
     <div class="columns">
       <div class="column is-centered-tablet-portrait">
         <h1 class="title section-title">{{ .Title }}</h1>
@@ -8,5 +8,5 @@
       </div>
     </div>
     {{ .Content }}
-  </div>
+  </div> -->
 </section>
