--- a/layouts/partials/froalaDesign.html
+++ b/layouts/partials/froalaDesign.html
@@ -11,7 +11,7 @@
     </div>
     {{- range $index, $ele := $features }}
     <div class="columns mt-60">
-      <div class="column is-centered-tablet-portrait" style=" {{if not (modBool $index 2)}}order:1{{end}}">
+      <div class="column is-centered-tablet-portrait" style="{{if not (modBool $index 2)}}order:1{{end}}">
         <figure class="media-left">
           <p class="image">
             <img src="{{ .image | relURL }}">
@@ -29,7 +29,7 @@
 
              
 
-              <p><a class="button btn-align-md btn-aligner rounded   {{ .btnKlass | markdownify }}" href="{{ .btnURL | markdownify }}">{{ .btnText | markdownify }}</a></p>
+              <p><a class="button btn-align-md btn-aligner rounded   {{ .btnKlass | markdownify }}" href="{{ .btnURL}}">{{ .btnText | markdownify }}</a></p>
             </div>
           </div>
         </article>
