--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -104,6 +104,9 @@ menu{position:-webkit-sticky;position:sticky;top:50px;padding:.5rem;margin:.5rem
     .hero-body .title.is-bold{
         font-size: 1.8rem;
     }
+    .price-card {
+        margin-bottom: 50px;
+    }
 
 }
 
