--- a/layouts/404.html
+++ b/layouts/404.html
@@ -1,17 +1,41 @@
 {{ define "main" }}
+<section class=" is-fullheight is-default is-bold">
+    {{ partial "navbar.html" . }}
+    {{ partial "navbar-clone.html" . }}
+</section>
 
 {{ "<!-- 404 page -->" | safeHTML }}
-<section class="page-404" style="background-image: url('{{ `images/background/404-page.jpg` | absURL }}');">
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-lg-12 text-center">
-                <h1 class="text-white font-weight-bold mb-2">Well, It Is Embarrassing, Right!</h1>
-                <h4 class="text-white mb-40">But The Page You Are Searching For Does Not Exists.</h4>
-                <a href="{{ .Site.BaseURL }}" class="btn btn-primary"> <i class="ti-angle-double-left"></i> Back To Home</a>
-            </div>
+<section class="section is-medium">
+    <div class="container">
+      <div class="columns mt-60">
+        <div class="column   is-7">
+          <h2 class="title is-4">Page Not Found</h2>
         </div>
+      </div>
+
+      <div class="columns mt-60">
+        <div class="column">
+            <figure class="media-left">
+                <p class="image has-text-centered">
+                  <img src="{{ "/images/404.png" | absURL }}"  alt="404" class="image" style="margin:auto;">
+                </p>
+              </figure>
+        </div>
+      </div> 
     </div>
 </section>
 {{ "<!-- /404 page -->" | safeHTML }}
+
+
+{{ if .Site.Params.footer }}
+{{ partial "footer.html" . }}
+{{ end }}
+
+<!-- Back To Top Button -->
+<div id="backtotop"><a href="#"></a></div>
+
+{{ if .Site.Params.sidebar }}
+{{ partial "sidebar.html" . }}
+{{ end }}
 
 {{ end }}
