--- a/layouts/404.html
+++ b/layouts/404.html
@@ -17,7 +17,7 @@
         <div class="column">
             <figure class="media-left">
                 <p class="image has-text-centered">
-                  <img src="{{ "/images/404.png" | absURL }}"  alt="404" class="image" style="margin:auto;">
+                  <img src="{{ "/images/404.svg" | absURL }}"  alt="404 page not found" class="image" style="margin:auto;">
                 </p>
               </figure>
         </div>
