--- a/themes/hugo-fresh/layouts/partials/meta.html
+++ b/themes/hugo-fresh/layouts/partials/meta.html
@@ -6,5 +6,5 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta http-equiv="x-ua-compatible" content="ie=edge">
-<meta property="og:image" content="https://www.aligner.io/images/logos/logo-new.svg">
+<meta property="og:image" content="https://www.aligner.io/images/logos/aligner-logo.png">
 <meta property="og:url" content="https://www.aligner.io">
