--- a/layouts/pages/single.html
+++ b/layouts/pages/single.html
@@ -7,9 +7,9 @@
   </head>
   <body>
     <!-- Preloader -->
-    <div id="preloader">
+    <!-- <div id="preloader">
       <div id="status"></div>
-    </div>
+    </div> -->
 
     {{ block "main" . }}
 
@@ -17,16 +17,14 @@
 
     
 
-    <section class="section is-small">
-      <div class="container">
-        <div class="columns">
-          <div class="column is-centered-tablet-portrait">
-            <h1 class="title section-title">{{ .Title }}</h1>
-            <h5 class="subtitle is-5 is-muted">{{ .Params.Subtitle }}</h5>
-            <div class="divider"></div>
+    <section class="section">
+      <div class="columns">
+        <div class="column is-8 is-offset-2">
+          <div class="content is-medium">
+            
+            <p>{{.Content}}</p>                
           </div>
         </div>
-        {{ .Content }}
       </div>
     </section>
 
