--- a/layouts/resources/list.html
+++ b/layouts/resources/list.html
@@ -26,7 +26,7 @@
             <h1 class="title section-title">{{ .Title }}</h1>
             <h5 class="subtitle is-5 is-muted">{{ .Params.Subtitle }}</h5>
             <div class="divider"></div>  
-            <div class="mt-40">
+            <div class="mt-40 resources-content">
               
             {{ .Content }}
             </div>
