--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -122,7 +122,9 @@ menu{position:-webkit-sticky;position:sticky;top:50px;padding:.5rem;margin:.5rem
     font-size: 110%;
 }
 
-
+.navbar.is-fresh .navbar-item {
+    display: inline-block;
+}
 @media (max-width: 767px) {
     .hero-body .title.is-bold{
         font-size: 1.8rem;
