--- a/themes/hugo-fresh/layouts/partials/navbar.html
+++ b/themes/hugo-fresh/layouts/partials/navbar.html
@@ -4,7 +4,7 @@
 {{ $sidebarVisible = .Params.sidebar }}
 {{ end }}
 {{- $navbarLogo     := .Site.Params.navbarlogo }}
-<nav class="navbar is-fresh is-transparent no-shadow" role="navigation" aria-label="main navigation">
+<nav class="navbar is-fresh  no-shadow" role="navigation" aria-label="main navigation">
   <div class="container">
     <div class="navbar-brand">
       {{- if $navbarLogo}}
