updated feature page

--- a/layouts/pages/single.html
+++ b/layouts/pages/single.html
@@ -29,6 +29,20 @@
     </section>
 
     
+    
+    {{ if .Params.include_froala }}
+    {{ partial "froalaDesign.html" . }}
+    {{ end }}
+	
+    {{ if .Params.include_featuresList }}
+    {{ partial "features-list.html" . }}
+    {{ end }}
+	
+	
+    {{ if .Params.include_froalaBlock }}
+    {{ partial "froalaBlock.html" . }}
+    {{ end }}
+	
     {{ if .Params.include_pricing }}
     {{ partial "pricing-inner.html" . }}
     {{ end }}
