--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -132,9 +132,20 @@ menu{position:-webkit-sticky;position:sticky;top:50px;padding:.5rem;margin:.5rem
     .price-card {
         margin-bottom: 50px;
     }
+	
+	.navbar.is-fresh .navbar-item {
+		display: block;
+		flex-grow: 0;
+		flex-shrink: 0;
+	}
 
 }
 
 @media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : portrait) {
+	.navbar.is-fresh .navbar-item {
+		display: block;
+		flex-grow: 0;
+		flex-shrink: 0;
+	}
 
 }
