--- a/layouts/index.html
+++ b/layouts/index.html
@@ -33,7 +33,7 @@
         <section class="section">
           <div class="columns is-variable is-8">
             {{- range ( where site.RegularPages "Section" "blog" | first 2 ) }}
-            <div class="column is-5 is-offset-1 ">
+            <div class="column is-5">
                 <div class="content is-medium">
                     <figure class="image is-16by9">
                         <img src="{{ .Params.image | absURL }}" alt="{{.Title}}">
