update as per comments

--- a/layouts/blog/single.html
+++ b/layouts/blog/single.html
@@ -9,7 +9,7 @@
       <div class="container">
         <div class="columns">
           <div class="column is-8 is-offset-2">
-            <figure class="image is-16by9">
+            <figure class="image">
               <img src="{{.Params.image | absURL }}" alt="{{.Title}}">
             </figure>
           </div>
