--- a/layouts/howto/list.html
+++ b/layouts/howto/list.html
@@ -10,11 +10,11 @@
         <section class="section">
           <div class="columns is-variable is-8">
               
-            {{range $index, $element := .Data.Pages }}
+            {{range $index, $element := .Data.Pages | first 10 }}
                 {{ $c :=add $index 1 }}
                 <div class="column is-5 is-offset-1 ">
                     <div class="content is-medium">
-                        <figure class="image is-16by9">
+                        <figure class="image ">
                             <img src="{{.Params.image | absURL }}" alt="{{.Title}}">
                           </figure>
                         <h2 class="subtitle is-5 has-text-grey">{{ .PublishDate.Format "January 2, 2006"  }} </h2>
