--- a/layouts/partials/pricing-inner.html
+++ b/layouts/partials/pricing-inner.html
@@ -9,10 +9,10 @@
 
 
 
-<section class="fdb-block">
+<section class="fdb-block mt-50">
   <div class="container"> 
-    <div class="title-wrapper has-text-centered pb-20">
-      <h2 class="title is-2">{{ $title }}</h2>
+    <div class="title-wrapper has-text-centered pb-20 ">
+      <h2 class="title is-2 ">{{ $title }}</h2>
       {{ if $subtitle }} <h3 class="subtitle is-5 is-muted">{{ $subtitle }}</h3> {{end}}
     </div>
     
