--- a/layouts/partials/pricing.html
+++ b/layouts/partials/pricing.html
@@ -37,7 +37,7 @@
               </ul>
               </div>
               <div class="card-action">
-                <a href="{{ .btnURL }}" class="button btn-align-md {{ .btnKlass }} raised">{{ .btnText }}</a>
+                <a href="{{ .btnURL }}" class="button btn-align-md {{ .btnKlass }} ">{{ .btnText }}</a>
               </div>
             </div>
 
@@ -51,7 +51,7 @@
 
       
       <div class="columns">
-        <div class="column is-full has-text-centered mt-20">          
+        <div class="column is-full has-text-centered mt-40">          
         <p>
           <a class="button cta secondary-btn  btn-aligner rounded" href="{{ $buttonLink }}">
             {{ $buttonText }}
