--- a/themes/hugo-fresh/assets/fresh/partials/_hero.scss
+++ b/themes/hugo-fresh/assets/fresh/partials/_hero.scss
@@ -8,7 +8,7 @@ Hero styles
     .title, .subtitle {
         // font-family: 'Helvetica', sans-serif;
 
-        font-family: 'Nunito', sans-serif;
+        font-family: 'Poppins', sans-serif;
     }
     .title {
         &.is-bold {
