--- a/themes/hugo-fresh/assets/fresh/partials/_navbar.scss
+++ b/themes/hugo-fresh/assets/fresh/partials/_navbar.scss
@@ -6,6 +6,7 @@ Navbar
 .navbar.is-fresh {
     position: relative;
     min-height: 3.8rem;
+    font-family: 'Poppins';
     z-index: 99;
     .container {
         min-height: 4rem;
