--- a/themes/hugo-fresh/assets/fresh/partials/_sections.scss
+++ b/themes/hugo-fresh/assets/fresh/partials/_sections.scss
@@ -19,7 +19,7 @@ Section Styles
     .title, .subtitle {
         /*font-family: 'Open Sans', sans-serif;*/
 
-        font-family: 'Nunito', sans-serif;
+        font-family: 'Poppins', sans-serif;
 
     }
     .subtitle {
@@ -35,7 +35,7 @@ Section Styles
     margin: 0 auto;
     .title, .subtitle {
         /*font-family: 'Open Sans', sans-serif;*/
-        font-family: 'Nunito', sans-serif;
+        font-family: 'Poppins', sans-serif;
     }
     .subtitle {
         &.is-muted {
