--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -1,21 +1,21 @@
 h1, h2, h3, h4, h5, h6{
-    font-family: 'Nunito', sans-serif;
-    color: #17224d;
+    font-family: 'Poppins', sans-serif;
+    color: #1B2537 !important;
     white-space: wrap;
 }
 p{
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
 .btn-aligner{
-    background: #5220dd !important;
-    border: #5220dd !important;
+    background: #24695C !important;
+    border: #24695C !important;
     color: #fff;
     padding: 11px 20px 13px 24px;
 }
 
 .btn-aligner:hover{
     color: #fff;
-    box-shadow: 0 14px 26px -12px rgba(82, 32, 221, 0.42), 0 4px 23px 0px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(82, 32, 221, 0.2) !important;
+    box-shadow: 0 14px 26px -12px rgba(36, 105, 92, 0.42), 0 4px 23px 0px rgba(36, 105, 92, 0.12), 0 8px 10px -5px rgba(36, 105, 92, 0.2) !important;
 }
 
 .feature-card{
@@ -30,6 +30,9 @@ p{
 .price-card{
     background: #f4f7fe;
     border-radius: 10px;
+    border-style: solid;
+    border-width: 1px;
+    border-color: #CED8E0;
 }
 .price-card.is-active{
     box-shadow: 0 8px 12px 0 rgba(122,122,122,0.2);
@@ -40,19 +43,18 @@ p{
     margin-left: -7%; */
 }
 .price-card .card-title{
-    background: rgb(255, 198, 71);
     color: #fff;
     padding: 40px 0px;
     border-radius: 10px 10px 0px 0px;
 }
 .price-card .card-title h4{
     font-size: 1.8rem;
-    color: #363636;
+    color: #1B2537;
 }
 
 .price-card .card-title h4.price{
     font-weight: 700;
-    color: #363636;
+    color: #1B2537;
 }
 .price-card .card-body{    
     padding: 40px 0px;
@@ -70,6 +72,9 @@ p{
 .cta  .tabs li{
     padding: 0.5em 1em;
 
+}
+.cta {
+    background: #F2F4F7;
 }
 
 .float-right{
@@ -169,6 +174,7 @@ menu{position:-webkit-sticky;position:sticky;top:50px;padding:.5rem;margin:.5rem
 	}
 
 }
+
 
 @media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : portrait) {
 	/*.navbar.is-fresh .navbar-item {
