--- a/themes/hugo-fresh/assets/fresh/partials/_buttons.scss
+++ b/themes/hugo-fresh/assets/fresh/partials/_buttons.scss
@@ -8,7 +8,7 @@ Classes to change the feel of bulma buttons
     cursor: pointer;
     transition: all 0.5s;
     &.cta {
-        font-family: 'Open Sans', sans-serif;
+        font-family: 'Poppins', sans-serif;
         font-size: 1rem;
         font-weight: 600;
         padding: 26px 40px 26px 40px;
@@ -17,10 +17,10 @@ Classes to change the feel of bulma buttons
         line-height: 0 !important;
     }
     &.rounded {
-        border-radius: 40px;
+        border-radius: 8px;
     }
     &.raised:hover {
-        box-shadow: 0 14px 26px -12px rgba(0, 0, 0, 0.42), 0 4px 23px 0px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(0, 0, 0, 0.2) !important;
+        box-shadow: 0 14px 26px -12px rgba(36, 105, 92, 0.42), 0 4px 23px 0px rgba(36, 105, 92, 0.12), 0 8px 10px -5px rgba(36, 105, 92, 0.2) !important;
         opacity: 0.8;
     }
     &.btn-outlined {
@@ -29,7 +29,7 @@ Classes to change the feel of bulma buttons
     &.signup-button {
         font-size: .9rem;
         font-weight: 600;
-        font-family: 'Open Sans', sans-serif;
+        font-family: 'Poppins', sans-serif;
         padding: 24px 26px;
         width: 130px;
     }
@@ -40,6 +40,7 @@ Classes to change the feel of bulma buttons
         outline: none;
         border-color: $primary;
         background-color: $primary;
+        padding: 25px;
         color: $white;
         transition: all 0.5s;
         &:hover {
