--- a/themes/hugo-fresh/assets/fresh/partials/_cards.scss
+++ b/themes/hugo-fresh/assets/fresh/partials/_cards.scss
@@ -12,7 +12,7 @@ Cards and Card content styles
     border-radius: 3px;
     margin: 0 auto;
     .card-title h4 {
-        font-family: 'Open Sans', sans-serif;
+        font-family: 'Poppins', sans-serif;
         padding-top: 25px;
         font-size: 1.2rem;
         font-weight: 600;
@@ -48,7 +48,7 @@ Cards and Card content styles
     width: 100%;
     margin-bottom: 20px;
     &.raised {
-        box-shadow: 0px 5px 25px 0px rgba(0, 0, 0, 0.2);
+        box-shadow: 0 14px 26px -12px rgba(36, 105, 92, 0.42), 0 4px 23px 0px rgba(36, 105, 92, 0.12), 0 8px 10px -5px rgba(36, 105, 92, 0.2) !important;
     }
     .tabs {
         padding: 15px 0.7rem;
