--- a/themes/hugo-fresh/assets/fresh/partials/_colors.scss
+++ b/themes/hugo-fresh/assets/fresh/partials/_colors.scss
@@ -7,12 +7,12 @@ $smoke-white: #fcfcfc;
 $grey-white: #f2f2f2;
 
 $primary: #4FC1EA;
-$secondary: #0C1E4A;
+$secondary: #319481;
 $accent: #00efb7;
 
 $fade-grey: #ededed;
 $light-grey: #EFF4F7;
-$title-grey: #A9ABAC;
+$title-grey: #646A73;
 $blue-grey: #444F60;
 $muted-grey: #999;
 $light-blue-grey: #98a9c3;
@@ -26,5 +26,5 @@ $frost: #004e92;
 $placeholder: #cecece;
 $dark-grey: #344258;
 $border-grey: #ccc;
-$muted-grey: #999;
+$muted-grey: #646A73;
 $section-grey: #fbfbfb;
