--- a/themes/hugo-fresh/assets/fresh/partials/_footer.scss
+++ b/themes/hugo-fresh/assets/fresh/partials/_footer.scss
@@ -5,6 +5,7 @@ Fresh Footer
 footer.footer-dark {
     background: #EDF4F5;
     color: $white;
+    font-family: 'Poppins';
     .columns {
         margin-top: 35px;
     }
@@ -16,11 +17,12 @@ footer.footer-dark {
     .footer-column {
         .footer-header h3 {
             font-weight:500;
+            font-family: 'Poppins';
             font-size: 1.2rem;
             text-transform: uppercase;
             letter-spacing: 1px;
             margin-bottom: 20px;
-            color: #363636;
+            color: #1B2537;
         }
         ul.link-list {
             line-height: 40px;
@@ -31,7 +33,7 @@ footer.footer-dark {
                 transition: all 0.5s;
             }
             :hover {
-                color: #071C4D;
+                color: $secondary;
             }
         }
         .level-item .icon {
