commit new blog post

--- a/layouts/blog/single.html
+++ b/layouts/blog/single.html
@@ -10,7 +10,7 @@
         <div class="columns">
           <div class="column is-8 is-offset-2">
             <figure class="image">
-              <img src="{{.Params.image | absURL }}" alt="{{.Title}}">
+              <img src="{{.Params.image | absURL }}" alt="{{.Title}}" style="width: 90%; height: auto;">
             </figure>
           </div>
         </div>
