--- a/layouts/blog/list.html
+++ b/layouts/blog/list.html
@@ -14,12 +14,12 @@
                 {{ $c :=add $index 1 }}
                 <div class="column is-5 is-offset-1 ">
                     <div class="content is-medium">
-                        <figure class="image is-16by91" >
-                            <img src="{{.Params.image | absURL }}" alt="{{.Title}}" style="max-width: 100%; height: 250px;">
+                        <figure class="image is-16by9" >
+                            <img src="{{.Params.image | absURL }}" alt="{{.Title}}" style="width: auto; height: 150px;">
                           </figure>
                         <h2 class="subtitle is-5 has-text-grey">{{ .PublishDate.Format "January 2, 2006"  }} </h2>
                         <h1 class="title has-text-black is-3">{{.Title}} </h1>
-                        <p class="has-text-dark">{{.Summary | safeHTML | truncate 150}}</p>                        
+                        <p class="has-text-dark">{{.Summary | safeHTML | truncate 100}}</p>                        
                         <a href="{{.Permalink}}">
                             <span class="button signup-button rounded secondary-btn btn-aligner ">
                             Read More →
