--- a/layouts/blog/list.html
+++ b/layouts/blog/list.html
@@ -15,7 +15,7 @@
                 <div class="column is-5 is-offset-1 ">
                     <div class="content is-medium">
                         <figure class="image is-16by9" >
-                            <img src="{{.Params.image | absURL }}" alt="{{.Title}}" style="width: auto; height: 150px;">
+                            <img src="{{.Params.image | absURL }}" alt="{{.Title}}" style="width: auto; height: 250px; border-radius: 10px;">
                           </figure>
                         <h2 class="subtitle is-5 has-text-grey">{{ .PublishDate.Format "January 2, 2006"  }} </h2>
                         <h1 class="title has-text-black is-3">{{.Title}} </h1>
