--- a/layouts/blog/single.html
+++ b/layouts/blog/single.html
@@ -10,7 +10,7 @@
         <div class="columns">
           <div class="column is-8 is-offset-2">
             <figure class="image">
-              <img src="{{.Params.image | absURL }}" alt="{{.Title}}" style="width:auto; height: auto; border-radius: 10px;">
+              <img src="{{.Params.image | absURL }}" alt="{{.Title}}" style="width:auto; height: 450px; border-radius: 10px;">
             </figure>
           </div>
         </div>
