--- a/layouts/index.html
+++ b/layouts/index.html
@@ -34,9 +34,9 @@
           <div class="columns is-variable is-8">
             {{- range ( where site.RegularPages "Section" "blog" | first 2 ) }}
             <div class="column is-5 is-offset-1">
-                <div class="content is-medium">
-                    <figure class="image is-16by9">
-                        <img src="{{ .Params.image | absURL }}" alt="{{.Title}}" style="width: auto; height: 200px; border-radius: 10px;">
+                <div class="content is-medium ">
+                    <figure class="image is-16by9 ">
+                        <img src="{{ .Params.image | absURL }}" alt="{{.Title}}" style="width: auto; height: 200px; border-radius: 10px; position: relative;">
                       </figure>
                     <h2 class="subtitle is-5 has-text-grey">{{ .PublishDate.Format "January 2, 2006"  }}</h2>
                     <h1 class="title has-text-black is-3">{{.Title}} </h1>
