--- a/layouts/blog/list.html
+++ b/layouts/blog/list.html
@@ -14,8 +14,8 @@
                 {{ $c :=add $index 1 }}
                 <div class="column is-5 is-offset-1 ">
                     <div class="content is-medium">
-                        <figure class="image is-16by9 " >
-                            <img src="{{.Params.image | absURL }}" alt="{{.Title}}" style="width: auto; height: 250px; border-radius: 10px; position: relative;">
+                        <figure class="image is-5by4" >
+                            <img src="{{.Params.image | absURL }}" alt="{{.Title}}" style="width: auto; height: 250px; border-radius: 10px;">
                           </figure>
                         <h2 class="subtitle is-5 has-text-grey">{{ .PublishDate.Format "January 2, 2006"  }} </h2>
                         <h1 class="title has-text-black is-3">{{.Title}} </h1>
