--- a/layouts/partials/pricing.html
+++ b/layouts/partials/pricing.html
@@ -26,7 +26,7 @@
             </div>
             <div class="card-body">
               <div class="card-icon">
-                  <img src="{{  .icon | relURL }}">
+                  <img src="{{  .icon | relURL }}" alt="{{ .alt }}">
               </div>
               <div class="card-text mt-20">
                 <p><strong>{{ .heighlight }}</strong></p>
