--- a/layouts/partials/features.html
+++ b/layouts/partials/features.html
@@ -17,7 +17,7 @@
         <div class="column is-one-forth ">
           <div class="features is-bordered has-text-centered ">           
             <div class="card-icon">
-              <img src="{{  .image | relURL }}">
+              <img src="{{  .image | relURL }}" alt="{{  .alt }}">
             </div>  
             <div class="card-title mt-20">
               <h3 class="title is-5"><strong>{{ .title }}</strong></h3>
