--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -159,9 +159,13 @@ menu{position:-webkit-sticky;position:sticky;top:50px;padding:.5rem;margin:.5rem
 #blog_image{
     position: absolute !important;
     padding: 10px;
-    margin: 10px;
-    
+    margin: 10px;}
+
+.code{
+    color: black !important;
 }
+    
+
 .img{
     display: block !important;
 }
