--- a/static/css/msdropdown/dd.css
+++ b/static/css/msdropdown/dd.css
@@ -73,10 +73,12 @@ img.fnone{float:none !important}
     border: 1px solid #F2F4F7;
     box-sizing: border-box;
     / shadow-main */
-    box-shadow: 0px 27px 24px rgba(27, 37, 55, 0.08);
+    box-shadow: 0px -27px 24px rgba(27, 37, 55, 0.08);
     /* box-shadow: none ; */
     background-color:#fff;
-    top: 51px !important;
+    /* top: 51px !important; */
+    bottom: 51px !important;
+    top: auto !important;
 }
 
 
