--- a/layouts/partials/languageList.html
+++ b/layouts/partials/languageList.html
@@ -12,10 +12,10 @@
                 {{ if eq $translation.Lang .Lang }}
                   {{ $selected := false }}
                     {{ if eq $pageLang .Lang}}
-                      <option id="{{ $translation.Language }}" value="{{ $translation.Permalink }}" data-image="/images/msdropdown/icons/{{ $translation.Language }}.jpg" data-imagecss="flag {{ $translation.Language }}" data-title="{{ .LanguageName }}" selected>{{ .LanguageName }}
+                      <option id="{{ $translation.Language }}" value="{{ $translation.Permalink }}" data-image="/images/msdropdown/icons/{{ $translation.Language }}.png" data-imagecss="flag {{ $translation.Language }}" data-title="{{ .LanguageName }}" selected>{{ .LanguageName }}
                       </option>
                       {{ else }}
-                      <option id="{{ $translation.Language }}" value="{{ $translation.Permalink }}" data-image="/images/msdropdown/icons/{{ $translation.Language }}.jpg" data-imagecss="flag {{ $translation.Language }}" data-title="{{ .LanguageName }}">{{ .LanguageName }}</option>
+                      <option id="{{ $translation.Language }}" value="{{ $translation.Permalink }}" data-image="/images/msdropdown/icons/{{ $translation.Language }}.png" data-imagecss="flag {{ $translation.Language }}" data-title="{{ .LanguageName }}">{{ .LanguageName }}</option>
                     {{ end }}
                 {{ end }}
               {{ end }}
