--- a/layouts/index.html
+++ b/layouts/index.html
@@ -35,7 +35,7 @@
             {{- range ( where site.RegularPages "Section" "blog" | first 2 ) }}
             <div class="column is-5 is-offset-1">
                 <div class="content is-medium ">
-                    <figure class="image is-16by9 ">
+                    <figure class="image ">
                         <img src="{{ .Params.image | absURL }}" alt="{{.Title}}" style="width: auto; height: 200px; border-radius: 10px; position: relative;">
                       </figure>
                     <h2 class="subtitle is-5 has-text-grey">{{ .PublishDate.Format "January 2, 2006"  }}</h2>
