--- a/themes/hugo-fresh/layouts/partials/meta.html
+++ b/themes/hugo-fresh/layouts/partials/meta.html
@@ -11,8 +11,10 @@
 <meta name="ahrefs-site-verification" content="494192760e3e8abd076de384e0a621ab5c38b76ec08b40844808ce5d998b7c5d">
 
 {{ range .Site.Languages }}   
-  <link rel="alternate" hreflang="{{.}}" href="{{ $.Site.BaseURL }}{{.}}/" />
+  <link rel="alternate" hreflang="{{.}}" href="{{ $.Site.BaseURL }}{{.}}" />
+  <link rel="canonical" href="{{ $.Site.BaseURL }}{{.}}"/>
 {{ end }}
+<link rel="alternate" hreflang="x-default" href="{{ $.Site.BaseURL }}" />
 <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
     new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
