--- a/layouts/resources/single.html
+++ b/layouts/resources/single.html
@@ -14,7 +14,7 @@
     {{ partial "navbar-clone.html" . }}
 
     
-    <section class="section is-medium">
+    <section class="section is-small">
       <div class="container">
         <div class="columns">
           <div class="column is-one-fifth">
