--- a/themes/hugo-fresh/layouts/partials/meta.html
+++ b/themes/hugo-fresh/layouts/partials/meta.html
@@ -11,7 +11,7 @@
 
 {{ range .Site.Languages }}   
   <link rel="alternate" hreflang="{{.}}" href="{{ $.Site.BaseURL }}{{.}}" />
-  <link rel="canonical" href="{{ $.Site.BaseURL }}{{.}}"/>
+  <link rel="canonical/" href="{{ $.Site.BaseURL }}{{.}}"/>
 {{ end }}
 <link rel="alternate" hreflang="x-default" href="{{ $.Site.BaseURL }}" />
 <!-- Google Tag Manager -->
